--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api",
   "version": "1.0.0",
   "description": "API for URLshorty",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=dev node server.js",
     "prod": "NODE_ENV=prod node server.js",
@@ -15,6 +15,7 @@
   "author": "Russell Tepper",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.14.1",
     "pug": "^2.0.0-beta11"
   },
