--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "db-migrate-pg": "^0.1.11",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "moment": "^2.17.1",
     "pg-promise": "^5.6.3"
   },
   "devDependencies": {
