--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "API for URLshorty",
   "main": "server.js",
+  "engines": {
+    "node": "6.2.0"
+  },
   "scripts": {
-    "start": "NODE_ENV=dev node server.js",
-    "prod": "NODE_ENV=prod node server.js",
-    "test": "NODE_ENV=test mocha",
+    "start": "nodemon app.js --exec babel-node --presets es2015,stage-2",
     "setupEnv": "node config/setup.js"
   },
   "repository": {
@@ -16,16 +17,27 @@
   "author": "Russell Tepper",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "^3.5.0",
+    "babel-core": "^6.23.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.4.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
     "body-parser": "^1.17.1",
-    "db-migrate": "^0.10.0-beta.20",
-    "db-migrate-pg": "^0.1.11",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "knex": "^0.12.7",
     "moment": "^2.17.1",
-    "pg-promise": "^5.6.3"
+    "objection": "^0.7.3",
+    "pg": "^6.1.3",
+    "rimraf": "^2.6.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
     "expect": "^1.20.2",
     "mocha": "^3.2.0"
   }
