--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "nodemon app.js --exec babel-node --presets es2015,stage-2",
     "setupEnv": "node config/setup.js",
-    "c": "node consoleREPL.js"
+    "co": "node consoleREPL.js"
   },
   "repository": {
     "type": "git",
