--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["es2015", "stage-2"],
   "plugins": [
-    ["transform-object-rest-spread"]
+    ["transform-object-rest-spread"],
+    ["transform-async-to-generator"]
   ]
 }
