--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "node": "6.2.0"
   },
   "scripts": {
+    "seed": "node db/seeds/masterObjectionSeeder.js",
     "test": "mocha",
-    "start": "nodemon app.js --exec babel-node --presets es2015,stage-2",
+    "start": "nodemon app.js --exec babel-node --presets es2015,stage-2,babel-plugin-transform-async-functions,babel-plugin-transform-regenerator",
     "setupEnv": "node config/setup.js",
     "co": "node consoleREPL.js"
   },
@@ -21,7 +22,6 @@
   "dependencies": {
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.4.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
@@ -31,14 +31,12 @@
     "knex": "^0.12.7",
     "moment": "^2.17.1",
     "objection": "^0.7.3",
-    "pg": "^6.1.3",
-    "rimraf": "^2.6.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "pg": "^6.1.3"
   },
   "devDependencies": {
+    "asyncawait": "^1.0.6",
     "babel-cli": "^6.23.0",
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "expect": "^1.20.2",
     "mocha": "^3.2.0"
