--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "node": "6.2.0"
   },
   "scripts": {
-    "seed": "node db/seeds/masterObjectSeeder.js",
+    "seed": "node -r babel-register -r babel-polyfill db/seeds/masterObjectSeeder.js",
     "test": "mocha",
-    "start": "nodemon app.js --exec babel-node --presets es2015,stage-2,babel-plugin-transform-async-functions,babel-plugin-transform-regenerator",
+    "start": "nodemon --exec 'node -r babel-register -r babel-polyfill app.js'",
     "setupEnv": "node config/setup.js",
     "co": "node consoleREPL.js"
   },
@@ -34,9 +34,7 @@
     "pg": "^6.1.3"
   },
   "devDependencies": {
-    "asyncawait": "^1.0.6",
     "babel-cli": "^6.23.0",
-    "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "expect": "^1.20.2",
     "mocha": "^3.2.0"
