--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "mocha",
     "start": "nodemon --exec 'node -r babel-register -r babel-polyfill app.js'",
     "setupEnv": "node config/setup.js",
-    "co": "node -r babel-register -r babel-polyfill consoleREPL.js"
+    "co": "node -r babel-register -r babel-polyfill contextREPL.js",
+    "de": "node debug -r babel-register -r babel-polyfill"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
+    "chalk": "^1.1.3",
     "expect": "^1.20.2",
     "mocha": "^3.2.0"
   }
