--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "body-parser": "^1.17.1",
+    "client-sessions": "^0.7.0",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "knex": "^0.12.7",
