--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.22.0",
     "body-parser": "^1.17.1",
     "client-sessions": "^0.7.0",
+    "cors": "^2.8.3",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "knex": "^0.12.7",
