--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "client-sessions": "^0.7.0",
     "cors": "^2.8.3",
