--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "client-sessions": "^0.7.0",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
