--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.14.1",
     "knex": "^0.12.7",
     "moment": "^2.17.1",
+    "multer": "^1.3.0",
     "objection": "^0.7.3",
     "pg": "^6.1.3"
   },
