--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/URLshorty/api.git"
+    "url": "https://github.com/URLshorty/urlshorty-api"
   },
   "author": "Russell Tepper",
   "license": "ISC",
